deployment/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-scripts-pod
  name: kafka-scripts-pod
  namespace: scripting-services
spec:
  ports:
    - port: 8080
  selector:
    app: kafka-scripts-pod
