deployment/templates/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: internal-nginx
  name: kafka-scripts-pod-internal
  namespace: scripting-services
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: kafka-scripts-pod
                port:
                  number: 8080
            path: /
            pathType: Prefix
